--- a/RobotWars/res/layout/select_screen.xml
+++ b/RobotWars/res/layout/select_screen.xml
@@ -3,13 +3,23 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
     
+    
     <Button
-        android:id="@+id/ConfigButton"
+        android:id="@+id/InstructionsButton"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
+        android:background="@drawable/instructions_button" />
+        
+    <Button
+        android:id="@+id/ConfigButton"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/InstructionsButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
         android:background="@drawable/config_button" />
 
     <Button
